# NNFS

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.c
Client/src/command_parser/: command_parser.c  command_parser.h
Server/: CMakeLists.txt
Server/src/: main.c
Server/src/request_dispatcher/: request_dispatcher.c  request_dispatcher.h
Server/src/session/: session.c  session.h
doc/: interactive_session_sample.txt
nnfs_proto/: CMakeLists.txt
nnfs_proto/include/: constants.h  request.h  request_encoder.h  response.h  response_encoder.h
nnfs_proto/src/: request_encoder.c  response_encoder.c
test/: CMakeLists.txt  command_test.sh  rw_test.c  unit_tests.c
